--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Check-in - Casamento</title>
+  <title>Check-in - KB</title>
   <style>
     body{font-family:Arial,Helvetica,sans-serif;padding:20px;max-width:720px;margin:0 auto;}
     input,button{padding:10px;font-size:16px;margin:6px 0;}
@@ -15,7 +15,12 @@
   </style>
 </head>
 <body>
-  <h2>Check-in de Convidados</h2>
+  <!-- Cabeçalho com imagem -->
+  <div style="text-align:center; margin-bottom:20px;">
+    <img src="monograma.png" alt="Monograma J & S" 
+         style="width:120px; height:auto; border-radius:12px;"/>
+  </div>
+  <h2>Check-in Casamento Jackline e Samarthony</h2>
 
   <label for="q">Nome ou telefone</label><br/>
   <input id="q" placeholder="Digite nome ou telefone" style="width:100%"/><br/>
@@ -111,3 +116,4 @@ function showError(msg){ document.getElementById('results').innerHTML = `<div cl
 </script>
 </body>
 </html>
+
