--- a/painel.html
+++ b/painel.html
@@ -12,7 +12,12 @@
   </style>
 </head>
 <body>
-  <h1>Painel de Check-ins</h1>
+  <!-- Cabeçalho com imagem -->
+  <div style="text-align:center; margin-bottom:20px;">
+    <img src="monograma.png" alt="Monograma J & S" 
+         style="width:120px; height:auto; border-radius:12px;"/>
+  </div>
+  <h1>Painel de Check-in</h1>
   <div id="stats" class="card">Carregando...</div>
   <div id="last" class="card">Últimos confirmados: carregando...</div>
 
@@ -47,3 +52,4 @@ setInterval(fetchResumo, POLL_MS);
 </script>
 </body>
 </html>
+
