--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Check-in - KB</title>
+   <link rel="icon" type="image/png" href="favicon.png" />
   <style>
     body{font-family:Arial,Helvetica,sans-serif;padding:20px;max-width:720px;margin:0 auto;}
     input,button{padding:10px;font-size:16px;margin:6px 0;}
@@ -116,4 +117,5 @@ function showError(msg){ document.getElementById('results').innerHTML = `<div cl
 </script>
 </body>
 </html>
+
 
