--- a/painel.html
+++ b/painel.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Painel - Check-in</title>
+   <link rel="icon" type="image/png" href="favicon.png" />
   <style>
     body{font-family:Arial,Helvetica,sans-serif;padding:20px;max-width:900px;margin:0 auto;}
     .card{border-radius:10px;padding:16px;margin:8px 0;border:1px solid #ddd;}
@@ -52,4 +53,5 @@ setInterval(fetchResumo, POLL_MS);
 </script>
 </body>
 </html>
+
 
