--- a/index.html
+++ b/index.html
@@ -1,121 +1,147 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Check-in - KB</title>
-   <link rel="icon" type="image/png" href="favicon.png" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Check-in KB</title>
+  <link rel="icon" type="image/png" href="favicon.png">
   <style>
-    body{font-family:Arial,Helvetica,sans-serif;padding:20px;max-width:720px;margin:0 auto;}
-    input,button{padding:10px;font-size:16px;margin:6px 0;}
-    .result{border-radius:8px;padding:14px;margin-top:12px;}
-    .ok{background:#e6ffed;border:1px solid #3bb44a;color:#0b6b2d;}
-    .warn{background:#fff7e6;border:1px solid #e6a800;color:#8a5a00;}
-    .err{background:#ffecec;border:1px solid #e03939;color:#7a1414;}
-    .muted{color:#666;font-size:14px;}
+    body {
+      font-family: "Poppins", sans-serif;
+      background-color: #fafafa;
+      color: #333;
+      text-align: center;
+      padding: 20px;
+    }
+    .container {
+      max-width: 500px;
+      margin: 0 auto;
+      background: #fff;
+      border-radius: 20px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+      padding: 30px;
+    }
+    input, button {
+      width: 100%;
+      padding: 12px;
+      margin: 8px 0;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      font-size: 16px;
+    }
+    button {
+      background-color: #a87e6e;
+      color: #fff;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+    button:hover { background-color: #8b6659; }
+    .alert {
+      margin-top: 15px;
+      padding: 15px;
+      border-radius: 8px;
+      font-weight: 600;
+    }
+    .success { background-color: #d4edda; color: #155724; }
+    .warning { background-color: #fff3cd; color: #856404; }
+    .error { background-color: #f8d7da; color: #721c24; }
+    footer {
+      margin-top: 40px;
+      font-size: 13px;
+      color: #888;
+    }
   </style>
 </head>
 <body>
-  <!-- Cabeçalho com imagem -->
-  <div style="text-align:center; margin-bottom:20px;">
-    <img src="monograma.png" alt="Monograma J & S" 
-         style="width:120px; height:auto; border-radius:12px;"/>
+
+  <!-- Cabeçalho -->
+  <div>
+    <img src="monograma.png" alt="Monograma J & S" style="width:120px; margin-bottom:10px;">
+    <h2>Casamento Jackline e samarthont</h2>
+    <p style="color:#777; font-size:14px;">06 de Dezembro de 2025 • Du Eventos</p>
   </div>
-  <h2>Check-in Casamento Jackline e Samarthony</h2>
 
-  <label for="q">Nome ou telefone</label><br/>
-  <input id="q" placeholder="Digite nome ou telefone" style="width:100%"/><br/>
-  <button id="buscar">Buscar</button>
-  <div id="loading" class="muted" style="display:none">Buscando...</div>
+  <div class="container">
+    <!-- Campo de busca -->
+    <input type="text" id="busca" placeholder="Digite nome ou telefone do convidado">
+    <button onclick="buscarConvidado()">Buscar</button>
 
-  <div id="results"></div>
+    <!-- Resultado -->
+    <div id="resultado"></div>
+    <div id="mensagem"></div>
+  </div>
 
-<script>
-const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwrw8bSoIjrTFDzZGJCU75AzX46Hrb4HXhK44vcunWV3nmGX4N5_KcDMuHU1f6WDFnn/exec'; // substitua
+  <!-- Rodapé -->
+  <footer>
+    © 2025 Casamento Jackline e Samarthony•  Check-in by Katiene Barbosa
+  </footer>
 
-document.getElementById('buscar').addEventListener('click', buscar);
-document.getElementById('q').addEventListener('keydown', (e)=>{ if(e.key==='Enter') buscar(); });
+  <script>
+    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwrw8bSoIjrTFDzZGJCU75AzX46Hrb4HXhK44vcunWV3nmGX4N5_KcDMuHU1f6WDFnn/exec"; // substitua pelo link do Apps Script
 
-async function buscar(){
-  const q = document.getElementById('q').value.trim();
-  if(!q){ alert('Digite nome ou telefone'); return; }
-  showLoading(true);
-  try{
-    const url = SCRIPT_URL + '?action=buscar&q=' + encodeURIComponent(q);
-    const res = await fetch(url);
-    const data = await res.json();
-    showLoading(false);
-    renderResults(data);
-  }catch(err){
-    showLoading(false);
-    showError('Erro na busca: ' + err.message);
-  }
-}
+    async function buscarConvidado() {
+      const busca = document.getElementById("busca").value.trim();
+      const msg = document.getElementById("mensagem");
+      const resDiv = document.getElementById("resultado");
 
-function renderResults(data){
-  const box = document.getElementById('results');
-  box.innerHTML = '';
-  if(!data || data.count === 0){ box.innerHTML = `<div class="result err">❌ Convite inválido ou não encontrado.</div>`; return; }
-  // mostra primeiro resultado e botão confirmar
-  const r = data.results[0];
-  const html = `
-    <div>
-      <div class="muted">Nome</div>
-      <strong>${r.nome}</strong><br/>
-      <div class="muted">Telefone</div>
-      <div>${r.telefone}</div>
-      <div class="muted">Mesa</div>
-      <div>${r.mesa || '---'}</div>
-      <div class="muted">Status atual</div>
-      <div>${r.status || 'pendente'}</div>
-      <div style="margin-top:10px;">
-        <button id="confirm">Confirmar entrada</button>
-      </div>
-    </div>
-  `;
-  box.innerHTML = html;
-  document.getElementById('confirm').addEventListener('click', ()=>confirmar(r));
-}
+      msg.innerHTML = "";
+      resDiv.innerHTML = "";
 
-async function confirmar(item){
-  const q = document.getElementById('q').value.trim();
-  const payload = { q: q };
-  try{
-    const res = await fetch(SCRIPT_URL + '?action=checkin', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify(payload)
-    });
-    const data = await res.json();
-    handleCheckinResponse(data);
-  }catch(err){
-    showError('Erro ao confirmar: ' + err.message);
-  }
-}
+      if (!busca) {
+        msg.innerHTML = `<div class="alert error">❌ Digite nome ou telefone.</div>`;
+        return;
+      }
 
-function handleCheckinResponse(data){
-  const box = document.getElementById('results');
-  if(!data) { box.innerHTML = `<div class="result err">Erro desconhecido.</div>`; return; }
-  if(data.status === 'ok'){
-    box.innerHTML = `<div class="result ok">✅ Convidado confirmado!<br><strong>Nome:</strong> ${data.nome}<br><strong>Mesa:</strong> ${data.mesa || '---'}</div>`;
-    document.getElementById('q').value = '';
-    return;
-  }
-  if(data.status === 'already'){
-    box.innerHTML = `<div class="result warn">⚠️ Convidado já fez check-in.<br><strong>Nome:</strong> ${data.nome}<br><strong>Mesa:</strong> ${data.mesa || '---'}</div>`;
-    return;
-  }
-  if(data.status === 'not_found'){
-    box.innerHTML = `<div class="result err">❌ Convite inválido ou não encontrado.</div>`;
-    return;
-  }
-  box.innerHTML = `<div class="result err">Erro: ${data.message || 'desconhecido'}</div>`;
-}
+      try {
+        const response = await fetch(`${SCRIPT_URL}?action=buscar&query=${encodeURIComponent(busca)}`);
+        const data = await response.json();
 
-function showLoading(v){ document.getElementById('loading').style.display = v ? 'block' : 'none'; }
-function showError(msg){ document.getElementById('results').innerHTML = `<div class="result err">${msg}</div>`; }
-</script>
+        if (data.status === "ok" && data.resultados.length > 0) {
+          const convidado = data.resultados[0];
+          resDiv.innerHTML = `
+            <p><strong>Nome:</strong> ${convidado.nome}<br>
+            <strong>Mesa:</strong> ${convidado.mesa}<br>
+            <strong>Status:</strong> ${convidado.status}</p>
+            <button onclick="confirmarEntrada('${convidado.nome}','${convidado.telefone}','${convidado.mesa}')">Confirmar entrada</button>
+          `;
+        } else {
+          msg.innerHTML = `<div class="alert error">❌ Convite inválido ou não encontrado.</div>`;
+        }
+      } catch (err) {
+        msg.innerHTML = `<div class="alert error">Erro ao buscar convidado.</div>`;
+      }
+    }
+
+    async function confirmarEntrada(nome, telefone, mesa) {
+      const msg = document.getElementById("mensagem");
+
+      const confirmar = confirm(`Confirmar entrada de:\n${nome}\nMesa: ${mesa}?`);
+      if (!confirmar) return;
+
+      try {
+        const response = await fetch(SCRIPT_URL, {
+          method: "POST",
+          body: JSON.stringify({
+            action: "checkin",
+            nome,
+            telefone
+          }),
+          headers: { "Content-Type": "application/json" }
+        });
+        const data = await response.json();
+
+        if (data.status === "ok") {
+          msg.innerHTML = `<div class="alert success">✅ Convidado confirmado!<br><strong>${data.nome}</strong><br>Mesa: ${data.mesa}</div>`;
+        } else if (data.status === "ja_confirmado") {
+          msg.innerHTML = `<div class="alert warning">⚠️ Convidado já fez check-in.</div>`;
+        } else {
+          msg.innerHTML = `<div class="alert error">❌ Erro: ${data.mensagem || "Falha ao registrar."}</div>`;
+        }
+      } catch (err) {
+        msg.innerHTML = `<div class="alert error">❌ Erro na conexão.</div>`;
+      }
+    }
+  </script>
+
 </body>
 </html>
-
-
