--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <!-- Cabeçalho -->
   <div>
     <img src="monograma.png" alt="Monograma J & S" style="width:120px; margin-bottom:10px;">
-    <h2>Casamento Jackline e samarthont</h2>
+    <h2>Casamento Jackline e Samarthony</h2>
     <p style="color:#777; font-size:14px;">06 de Dezembro de 2025 • Du Eventos</p>
   </div>
 
@@ -145,3 +145,4 @@
 
 </body>
 </html>
+
