--- a/index.html
+++ b/index.html
@@ -6,54 +6,19 @@
   <title>Check-in KB</title>
   <link rel="icon" type="image/png" href="favicon.png">
   <style>
-    body {
-      font-family: "Poppins", sans-serif;
-      background-color: #fafafa;
-      color: #333;
-      text-align: center;
-      padding: 20px;
-    }
-    .container {
-      max-width: 500px;
-      margin: 0 auto;
-      background: #fff;
-      border-radius: 20px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-      padding: 30px;
-    }
-    input, button {
-      width: 100%;
-      padding: 12px;
-      margin: 8px 0;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      font-size: 16px;
-    }
-    button {
-      background-color: #a87e6e;
-      color: #fff;
-      cursor: pointer;
-      transition: 0.3s;
-    }
+    body { font-family: "Poppins", sans-serif; background-color: #fafafa; color: #333; text-align: center; padding: 20px; }
+    .container { max-width: 500px; margin: 0 auto; background: #fff; border-radius: 20px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); padding: 30px; }
+    input, button { width: 100%; padding: 12px; margin: 8px 0; border-radius: 8px; border: 1px solid #ccc; font-size: 16px; }
+    button { background-color: #a87e6e; color: #fff; cursor: pointer; transition: 0.3s; }
     button:hover { background-color: #8b6659; }
-    .alert {
-      margin-top: 15px;
-      padding: 15px;
-      border-radius: 8px;
-      font-weight: 600;
-    }
+    .alert { margin-top: 15px; padding: 15px; border-radius: 8px; font-weight: 600; }
     .success { background-color: #d4edda; color: #155724; }
     .warning { background-color: #fff3cd; color: #856404; }
     .error { background-color: #f8d7da; color: #721c24; }
-    footer {
-      margin-top: 40px;
-      font-size: 13px;
-      color: #888;
-    }
+    footer { margin-top: 40px; font-size: 13px; color: #888; }
   </style>
 </head>
 <body>
-
   <div>
     <img src="monograma.png" alt="Monograma J & S" style="width:120px; margin-bottom:10px;">
     <h2>Casamento Jackline e Samarthony</h2>
@@ -63,37 +28,29 @@
   <div class="container">
     <input type="text" id="busca" placeholder="Digite nome ou telefone do convidado">
     <button onclick="buscarConvidado()">Buscar</button>
-
     <div id="resultado"></div>
     <div id="mensagem"></div>
   </div>
 
-  <footer>
-    © 2025 Casamento Jackline e Samarthony • Check-in by Katiene Barbosa
-  </footer>
+  <footer>© 2025 Casamento Jackline e Samarthony • Check-in by Katiene Barbosa</footer>
 
   <script>
-    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwMsPYKVzW7smOSiGLMspQ-7sx3exgF3s-pbwBvoCHz7cKdvKbKvNKSvRsXvt29lVNT/exec"; // seu Apps Script
+    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzOA_IkLvKTLDC7ClBhz8NlZVFJ8Jh9Ag0CL6jJqn9bssGvzg3TR-1c8u_PI6mfVfkO/exec"; // substitua pelo link do Apps Script
 
     async function buscarConvidado() {
       const busca = document.getElementById("busca").value.trim();
       const msg = document.getElementById("mensagem");
       const resDiv = document.getElementById("resultado");
+      msg.innerHTML = ""; resDiv.innerHTML = "";
 
-      msg.innerHTML = "";
-      resDiv.innerHTML = "";
-
-      if (!busca) {
-        msg.innerHTML = `<div class="alert error">❌ Digite nome ou telefone.</div>`;
-        return;
-      }
+      if (!busca) { msg.innerHTML = `<div class="alert error">❌ Digite nome ou telefone.</div>`; return; }
 
       try {
         const response = await fetch(`${SCRIPT_URL}?action=buscar&query=${encodeURIComponent(busca)}`);
         const data = await response.json();
 
-        if (data.status === "ok" && data.results.length > 0) {
-          const convidado = data.results[0];
+        if (data.status === "ok" && data.resultados.length > 0) {
+          const convidado = data.resultados[0];
           resDiv.innerHTML = `
             <p><strong>Nome:</strong> ${convidado.nome}<br>
             <strong>Mesa:</strong> ${convidado.mesa}<br>
@@ -110,18 +67,12 @@
 
     async function confirmarEntrada(nome, telefone, mesa) {
       const msg = document.getElementById("mensagem");
-
-      const confirmar = confirm(`Confirmar entrada de:\n${nome}\nMesa: ${mesa}?`);
-      if (!confirmar) return;
+      if (!confirm(`Confirmar entrada de:\n${nome}\nMesa: ${mesa}?`)) return;
 
       try {
         const response = await fetch(SCRIPT_URL, {
           method: "POST",
-          body: JSON.stringify({
-            action: "checkin",
-            nome,
-            telefone
-          }),
+          body: JSON.stringify({ action: "checkin", nome, telefone }),
           headers: { "Content-Type": "application/json" }
         });
         const data = await response.json();
@@ -138,6 +89,5 @@
       }
     }
   </script>
-
 </body>
 </html>
