--- a/painel.html
+++ b/painel.html
@@ -15,7 +15,7 @@
 <body>
   <!-- Cabeçalho com imagem -->
   <div style="text-align:center; margin-bottom:20px;">
-    <img src="monograma.png" alt="Monograma J & S" 
+    <img src="cerimonialkb.png" alt="Monograma J & S" 
          style="width:120px; height:auto; border-radius:12px;"/>
   </div>
   <h1>Painel de Check-in</h1>
@@ -23,7 +23,7 @@
   <div id="last" class="card">Últimos confirmados: carregando...</div>
 
 <script>
-const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwMsPYKVzW7smOSiGLMspQ-7sx3exgF3s-pbwBvoCHz7cKdvKbKvNKSvRsXvt29lVNT/exec'; // substitua
+const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbzOA_IkLvKTLDC7ClBhz8NlZVFJ8Jh9Ag0CL6jJqn9bssGvzg3TR-1c8u_PI6mfVfkO/exec'; // substitua
 const POLL_MS = 5000;
 
 async function fetchResumo(){
@@ -53,6 +53,7 @@ setInterval(fetchResumo, POLL_MS);
 </script>
 </body>
 </html>
+
 
 
 
