--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Check-in Casamento Jackeline & Samarthony</title>
+<title>Check-in Casamento J & S</title>
 <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 16 16%22><path fill=%22%238BD24D%22 d=%22M8 14s6-4.35 6-8.5S10.75 1 8 4.5 2 5.5 2 5.5 2 9.65 8 14z%22/></svg>">
 <script src="https://cdn.tailwindcss.com"></script>
 <style>
 body { font-family:sans-serif; margin:0; background:#fff; color:#333; }
-.header { background-color:#8BD24D; color:white; padding:1.5rem; text-align:center; }
-.header img { max-height:80px; margin-bottom:0.5rem; }
-.fade-in { animation: fadeIn 0.5s ease-in; }
+.header { background-color:#cff1a9; color:white; padding:1.rem; text-align:center; }
+.header img { max-height:100px; margin-bottom:0.5rem; }
+.fade-in { animation: fadeIn 1s ease-in; }
 @keyframes fadeIn { from {opacity:0;transform:translateY(20px);} to {opacity:1;transform:translateY(0);} }
 .pulse-success { animation: pulseSuccess 1.5s ease-in-out; }
 @keyframes pulseSuccess {0%{transform:scale(1);}50%{transform:scale(1.05);background-color:#8BD24D;}100%{transform:scale(1);}}
@@ -167,3 +167,4 @@ document.getElementById('searchInput').focus();
 
 </body>
 </html>
+
