--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script src="https://cdn.tailwindcss.com"></script>
 <style>
 body { font-family:sans-serif; margin:0; background:#fff; color:#333; }
-.header { background-color:#cff1a9; color:white; padding:1.rem; text-align:center; }
+.header { background-color:#cff1a9; color:8bd24d; padding:0.5rem; text-align:center; }
 .header img { max-height:100px; margin-bottom:0.5rem; }
 .fade-in { animation: fadeIn 1s ease-in; }
 @keyframes fadeIn { from {opacity:0;transform:translateY(20px);} to {opacity:1;transform:translateY(0);} }
@@ -167,4 +167,5 @@ document.getElementById('searchInput').focus();
 
 </body>
 </html>
+
 
