--- a/index.html
+++ b/index.html
@@ -3,13 +3,57 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Check-in Casamento J & S</title>
-<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 16 16%22><path fill=%22%238BD24D%22 d=%22M8 14s6-4.35 6-8.5S10.75 1 8 4.5 2 5.5 2 5.5 2 9.65 8 14z%22/></svg>">
-<script src="https://cdn.tailwindcss.com"></script>
+<title>Check-in de Convidados - Jackeline & Samarthony</title>
+<link rel="icon" href="favicon.png" type="image/png">
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+
 <style>
-body { font-family:sans-serif; margin:0; background:#fff; color:#333; }
-.header { background-color:#cff1a9; color:8bd24d; padding:0.5rem; text-align:center; }
-.header img { max-height:100px; margin-bottom:0.5rem; }
+body { font-family:'Open Sans', sans-serif; margin:0; background:#fff; color:#333; }
+
+/* === CABEÇALHO === */
+.header {
+  background-color: #cff1a9;
+  color: #000;
+  padding: 1.5rem 2rem;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+}
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 1rem;
+  max-width: 900px;
+  margin: 0 auto;
+}
+.logo {
+  height: 80px;
+  width: auto;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.header-text {
+  text-align: center;
+}
+.couple-names {
+  font-family: 'Great Vibes', cursive;
+  font-size: 2.5rem;
+  margin: 0;
+  line-height: 1.2;
+}
+.event-info {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1rem;
+  margin-top: 0.3rem;
+  letter-spacing: 0.5px;
+}
+@media (max-width: 600px) {
+  .header-container { flex-direction: column; }
+  .couple-names { font-size: 2rem; }
+  .logo { height: 70px; }
+}
+
+/* === SEU CSS ORIGINAL === */
 .fade-in { animation: fadeIn 1s ease-in; }
 @keyframes fadeIn { from {opacity:0;transform:translateY(20px);} to {opacity:1;transform:translateY(0);} }
 .pulse-success { animation: pulseSuccess 1.5s ease-in-out; }
@@ -25,14 +69,19 @@ ul { list-style:none; padding:0; margin:0; }
 li { cursor:pointer; }
 </style>
 </head>
+
 <body>
 
-<div class="header">
-  <img src="monograma.png" alt="Monograma Jackeline & Samarthony" />
-  <div class="text-lg font-bold">Jackeline & Samarthony</div>
-  <div class="text-sm">06/12/2025 - Du Eventos</div>
-</div>
-
+<!-- 🔰 CABEÇALHO REFINADO -->
+<header class="header">
+  <div class="header-container">
+    <img src="monograma.png" alt="Monograma Jackeline & Samarthony" class="logo">
+    <div class="header-text">
+      <h1 class="couple-names">Jackeline & Samarthony</h1>
+      <p class="event-info">06/12/2025 • Du Eventos</p>
+    </div>
+  </div>
+</header>
 <div class="max-w-xl mx-auto mt-6 bg-white p-6 rounded-xl shadow-md">
   <input type="text" id="searchInput" placeholder="Digite nome, apelido ou telefone" onkeyup="searchGuest(event)">
   <button class="button-green w-full mb-2" onclick="performSearch()">Buscar Convidado</button>
@@ -167,5 +216,6 @@ document.getElementById('searchInput').focus();
 
 </body>
 </html>
+
 
 
