--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body { font-family:'Open Sans', sans-serif; margin:0; background:#fff; color:#33
   margin: 0 auto;
 }
 .logo {
-  height: 80px;
+  height: 100px;
   width: auto;
   border-radius: 50%;
   object-fit: cover;
@@ -43,7 +43,7 @@ body { font-family:'Open Sans', sans-serif; margin:0; background:#fff; color:#33
 }
 .event-info {
   font-family: 'Open Sans', sans-serif;
-  font-size: 1rem;
+  font-size: 0.5rem;
   margin-top: 0.3rem;
   letter-spacing: 0.5px;
 }
@@ -77,7 +77,7 @@ li { cursor:pointer; }
   <div class="header-container">
     <img src="monograma.png" alt="Monograma Jackeline & Samarthony" class="logo">
     <div class="header-text">
-      <h1 class="couple-names">Jackeline & Samarthony</h1>
+      <h1 class="couple-names">Jackeline e Samarthony</h1>
       <p class="event-info">06/12/2025 • Du Eventos</p>
     </div>
   </div>
@@ -90,7 +90,7 @@ li { cursor:pointer; }
   <h3 class="font-bold mt-4 mb-2">⏳ Convidados Pendentes</h3>
   <ul id="pendingList" class="space-y-2"></ul>
 
-  <h3 class="font-bold mt-4 mb-2">✅ Convidados Confirmados</h3>
+  <h3 class="font-bold mt-4 mb-2">✅ Convidados Check-in Realizado</h3>
   <ul id="confirmedList" class="space-y-2"></ul>
 </div>
 
@@ -216,6 +216,7 @@ document.getElementById('searchInput').focus();
 
 </body>
 </html>
+
 
 
 
