--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ let guests=[], selectedGuest=null;
 
 async function loadGuestsFromSheets(){
   try{
-    const res = await fetch(`${APPS_SCRIPT_URL}?action=getGuests`);
+    const res = await fetch(`${https://script.google.com/macros/s/AKfycbxD6XpmlV52Jci_udnwqwdqUIXLHY7MvG5s2srloHYF8GCqgBeaJDSnrppF7jbcwaiM/exec}?action=getGuests`);
     const data = await res.json();
     if(data.success){
       guests = data.guests;
@@ -181,7 +181,7 @@ async function confirmCheckin(){
   if(!selectedGuest) return;
   try{
     const payload = {action:'checkin', guestId:selectedGuest.id, timestamp:new Date().toISOString()};
-    const res = await fetch(APPS_SCRIPT_URL,{method:'POST',body:JSON.stringify(payload)});
+    const res = await fetch(https://script.google.com/macros/s/AKfycbxD6XpmlV52Jci_udnwqwdqUIXLHY7MvG5s2srloHYF8GCqgBeaJDSnrppF7jbcwaiM/exec,{method:'POST',body:JSON.stringify(payload)});
     const data = await res.json();
     if(data.success){
       selectedGuest.status='confirmado';
@@ -216,6 +216,7 @@ document.getElementById('searchInput').focus();
 
 </body>
 </html>
+
 
 
 
